--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,8 @@
 @import 'base/reset';
 @import 'base/typography';
 @import 'layout/header';
+@import 'layout/contenido';
 @import 'layout/forms';
+@import 'layout/footer';
 @import 'layout/navigation';
 @import 'components/buttons';
