--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10013,14 +10013,24 @@ h3 {
 footer {
   background-color: #000;
   color: #fff;
-  text-align: center;
-  padding: 2rem 0;
   margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.5rem 0;
 }
 @media (min-width: 768px) {
   footer {
-    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem 0;
   }
+}
+
+.derechos {
+  display: inline-block;
 }
 
 .derechos__text {
@@ -10028,20 +10038,18 @@ footer {
 }
 @media (min-width: 768px) {
   .derechos__text {
-    text-align: left;
-    position: relative;
-    top: 2rem;
+    display: inline-block;
   }
 }
 
 .anuncios {
-  display: grid;
+  text-align: center;
 }
 @media (min-width: 768px) {
   .anuncios {
+    margin-right: 5%;
     display: flex;
     justify-content: end;
-    padding-right: 8rem;
   }
 }
 .anuncios__enlace {
@@ -10062,13 +10070,7 @@ footer {
 }
 
 .form-control {
-  margin: 0 4rem;
-}
-@media (min-width: 768px) {
-  .form-control {
-    position: relative;
-    bottom: 10px;
-  }
+  margin: 0 1rem;
 }
 
 .form-control:hover {
@@ -10098,14 +10100,8 @@ footer {
 .boton {
   background-color: #ffaf6d;
   color: #fff;
-  margin-top: 10px;
-}
-@media (min-width: 768px) {
-  .boton {
-    position: relative;
-    right: 3rem;
-    bottom: 15px;
-  }
+  border-radius: 5px;
+  padding: 5px 10px;
 }
 
 .boton:hover {
