--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,29 +1,37 @@
 footer {
     background-color: $black;
     color: $white;
-    text-align: center;
-    padding: 2rem 0;
     margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.5rem 0;
     @media(min-width: 768px) {
-        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.5rem 0;
     }
+}
+
+.derechos {
+    display: inline-block;
 }
 
 .derechos__text {
     padding: 0 2rem;
     @media (min-width: 768px) {
-        text-align: left;
-        position: relative;
-        top: 2rem;
+        display: inline-block;
     }
 }
 
 .anuncios {
-    display: grid;
+    text-align: center;
     @media (min-width: 768px) {
+        margin-right: 5%;
         display: flex;
         justify-content: end;
-        padding-right: 8rem;
     }
     &__enlace {
         color: $white;
@@ -42,11 +50,7 @@ footer {
 }
 
 .form-control {
-    margin: 0 4rem;
-    @media (min-width: 768px) {
-        position: relative;
-        bottom: 10px;
-    }
+    margin: 0 1rem;
 }
 
 .form-control:hover {
